--- a/Library.Persistence/appsettings.json
+++ b/Library.Persistence/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LibraryDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=LibraryDb;Trusted_Connection=True;"
   }
 }
