Still need to configure services and dependencies

--- a/Library.UnitTests/Library.UnitTests.csproj
+++ b/Library.UnitTests/Library.UnitTests.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Library.Services\Library.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\API\" />
+  </ItemGroup>
+
 </Project>
