--- a/Library.UnitTests/Library.UnitTests.csproj
+++ b/Library.UnitTests/Library.UnitTests.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Library\Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\MVC\" />
+  </ItemGroup>
+
 </Project>
